# wanco

./: .clang-fomat-ignore  .clang-tidy.ignore  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  a.c  b.c  compile-time.md  design.md  memo.md  restore-v2.md  sqlite_example  test.sh  wasm.s
benchmark/: Makefile  README.md  benchmark-old.py  fib.c  pyproject.toml  restore-finish-time.txt  run.py
benchmark/binaryen-artifacts/: Makefile
benchmark/computer-lab-benchmark/: LICENSE  Makefile  README.md  binary-trees.c.wasm  cat-sync.c.wasm  fannkuch-redux.c.wasm  fasta.c.wasm  mandelbrot-simd.c.wasm  mandelbrot.c.wasm  nbody.c.wasm  nop.c.wasm
benchmark/gapbs/: Makefile
benchmark/legacy/: chkpt-time-criu.sh  chkpt-time-wasm.sh
benchmark/llama2-c/: Makefile  README.md  llama2-c.elf  llama2-c.wasm
benchmark/new-scripts/: exec-time.py  rewriter.py  whisker-overhead.py
benchmark/result/: chkpt-time-criu-aarch64.txt  chkpt-time-criu-x64.txt  chkpt-time-wasm-aarch64.txt  chkpt-time-wasm-x64.txt  overhead-aarch64.txt  overhead-x64.txt
benchmark/results/: README.md  analyze-result.txt  chkpt-restore-criu.csv  chkpt-restore-wasm.csv  chkpt-restore.csv  code-size-comparison.txt  overhead.json  result.json
benchmark/scripts/: analyze-results.py  bench-check.sh  bench-comlab.sh  bench-llama2.sh  build.sh  chkpt-restore-criu.py  chkpt-restore-wasm.py  chkpt-time-criu.sh  chkpt-time-wasm.sh  common.py  common.sh  exec-time.py  graph-llama2.py  old-bench-comlab.sh  overhead.sh  plot-code-size.py  plot-exec-time.py  plot-migration-time.py  plot-wasm-vs-criu.py  rewriter.py  run-all-bench.sh  snapshot-size-criu.sh  snapshot-size-wasm.sh  whisker-overhead.py
benchmark/sqlite/: build.sh
benchmark/sqlite_example/: README.md  main.c  sqlite_example.wasm
benchmark/wamrc-artifacts/: .gitignore  Makefile
benchmark/wanco-artifacts/: .gitignore  Makefile
benchmark/wasmedge-artifacts/: .gitignore  Makefile
cmake/: FindLibunwind.cmake
compiler/src/: lib.rs
compiler/src/compile/cr/: checkpoint.rs  mod.rs  opt.rs
compiler/src/compile/cr_v2/: mod.rs
compiler/src/compile/cr_v2/stackmap/: mod.rs
compiler/src/compile/cr_v2/stackmap/regs/: mod.rs
compiler/tests/: fd_write.wat
demo/: README.md  counter.wat  fib.wat  loop.wat  ls.wasm
docs/: TODO.md  cr.md  cross_compilation.md  design.md  macos.md  restore-v2.md
examples/: README.md  hello.c  hello.wat  ls.c
lib/: CMakeLists.txt  Cargo.toml  Makefile  debug.c  debug.h  exec_env.h  lib.c  wrt.c
lib-rt/: CMakeLists.txt  aot.h  api.cc  api.h  wanco.h  wrt.cc
lib-rt/arch/: aarch64.h  arch.h  x86_64.h
lib-rt/checkpoint/: checkpoint.cc  checkpoint.h  stacktrace.cc  stacktrace.h
lib-rt/chkpt/: chkpt.h  chkpt_json.cc  chkpt_protobuf.cc
lib-rt/elf/: elf.cc  elf.h
lib-rt/osr/: asr_exit.cc  wasm_stacktrace.h
lib-rt/protobuf/: chkpt.pb.cc  chkpt.pb.h  chkpt.proto  snapshot.proto
lib-rt/snapshot/: snapshot.h  snapshot_protobuf.cc
lib-rt/stackmap/: arch.h  dwarf.cc  elf.cc  elf.h  metadata.cc  metadata.h  stackmap.cc  stackmap.h  x86_64.h
lib-rt/stackmap/arch/: x86_64.h
lib-rt/stacktrace/: stacktrace.cc  stacktrace.h
lib-rt/tobiaslocker/: README.md
lib-rt/v2/: chkpt_v2.h  elf.cc  elf.h  stack_transform.cc  stack_transform.h  stackmap.cc  stackmap.h
lib-wasi/: Cargo.toml
lib-wasi/src/: lib.rs
lib-wasi/src/wrapper/: preview1.rs
lib/cmake/: FindLibdwarf.cmake
lib/cpp/: CMakeLists.txt  Makefile  aot.h  api.cc  chkpt.h  chkpt_decode.cc  chkpt_encode.cc  exec_env.h  lib.cc  wanco.h  wasi.h  wrt.cc
lib/cpp/chkpt/: chkpt.h  chkpt_json.cc  chkpt_protobuf.cc
lib/cpp/lz4/: lz4.h
lib/cpp/v1/: chkpt.h  chkpt_decode.cc  chkpt_encode.cc
lib/cpp/v2/: chkpt_v2.h  stack_transform.cc  stackmap.cc
lib/rust/wasi/: Cargo.toml
lib/rust/wasi/src/: lib.rs
lib/rust/wasi/src/wrapper/: mod.rs  preview1.rs
lib/wasi/: Cargo.toml
lib/wasi/src/: lib.rs
src/: context.rs  driver.rs  inkwell.rs  main.rs
src/compile/: checkpoint.rs  compile_function.rs  compile_global.rs  compile_memory.rs  compile_module.rs  compile_type.rs  control.rs  helper.rs  mod.rs  synthesize.rs
src/compile/checkpoint/: mod.rs  stackmap.rs
src/compile/checkpoint/regs/: x86_64.rs
tests/: fd_write.wat  run_wasker_test.rs  test_fd_write.rs  test_wasker.rs
wanco/: Cargo.toml
wanco/src/: context.rs  driver.rs  inkwell.rs  lib.rs  main.rs
wanco/src/compile/: compile_function.rs  compile_global.rs  compile_module.rs  compile_type.rs  control.rs  debug.rs  helper.rs  mod.rs  synthesize.rs
wanco/src/compile/cr/: checkpoint.rs  mod.rs  opt.rs  restore.rs  stackmap.rs
wanco/src/compile/cr_v2/: mod.rs
wanco/src/compile/cr_v2/stackmap/: mod.rs  stackmap.rs
wanco/src/compile/cr_v2/stackmap/regs/: x86_64.rs
wanco/src/compile/stackmap/: llvm_stackmap.rs  mod.rs
wanco/src/compile/stackmap/regs/: aarch64.rs  mod.rs
wanco/tests/: test_fd_write.rs  test_wasker.rs
wanco/tests/wasker/: call.wat  convert.wat  endianness.wat  i64.wat  return.wat
