[package]
name = "wanco_wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi-common = "22.0.0"
cap-std = "3.2.0"
tokio = { version = "1.0", features = ["full"] }
wiggle = "22.0.0"
wasmtime-wasi-nn = { version = "22.0.0", features = [] }
wit-bindgen = "0.28.0"
anyhow = "1.0.86"
thiserror = "1.0.63"

[lib]
crate-type = ["staticlib"]
