[package]
name = "wanco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm17-0"] }
wat = "1.211.1"
wasmparser = "0.211.1"
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.61"
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
nom = "7.1.3"
rand = "0.8.5"

[[bin]]
name = "wanco"
path = "src/main.rs"
