[package]
name = "wanco-wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi-common = "22.0.0"
tokio = { version = "1.0", features = ["full"] }
wiggle = "22.0.0"

[lib]
crate-type = ["staticlib"]
